--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-
-streamlit
+streamlit==1.9.0
 streamlit-option-menu==0.3.2
-pandas
+pandas==1.3.3
 st-annotated-text==3.0.0
 plotly_express==0.4.1
 requests==2.27.1
 streamlit-lottie==0.0.3
-pandas-profiling
-streamlit-pandas-profiling
+pandas-profiling==3.2.0
+streamlit-pandas-profiling==0.1.3
 numpy==1.21.2
