--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+
 streamlit==1.9.0
+pydantic_settings==2.0.2
+pydantic==2.1.1
 streamlit-option-menu==0.3.2
 pandas==1.3.3
 st-annotated-text==3.0.0
